--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,13 @@
     <artifactId>poi-ooxml</artifactId>
     <version>3.8-beta4</version>
 </dependency>
+ <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+<dependency>
+    <groupId>net.masterthought</groupId>
+    <artifactId>cucumber-reporting</artifactId>
+    <version>4.11.2</version>
+</dependency>
   </dependencies>
+
+
 </project>
